--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,5 @@
----
----
+$section-headings-color: #5c068c;
 
-@import 'jekyll-theme-cayman';
+@import "{{ site.theme }}";
+
+import 'jekyll-theme-cayman';
