--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,5 +2,6 @@
 ---
 
 $section-headings-color: #5c068c;
-
+$header-bg-color-secondary: #5c068c;
+$header-bg-color: #5c068c;
 @import "{{ site.theme }}";
