update registration page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,6 @@
 ---
 
 $section-headings-color: #5c068c;
-$header-bg-color-secondary: #5c068c;
+$header-bg-color-secondary: #8c067a;
 $header-bg-color: #5c068c;
 @import "{{ site.theme }}";
