--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,12 +33,12 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
 
-      <a href="{{ site.github.zip_url }}" class="btn">Information</a>
-      <a href="" class="btn">Posters</a>
-      <a href="{{ site.github.tar_url }}" class="btn">Registration</a>
-      <a href="{{ site.github.zip_url }}" class="btn">Rules</a>
-      <a href="{{ site.github.tar_url }}" class="btn">Directions</a>
-      <a href="{{ site.github.zip_url }}" class="btn">Contact</a>
+      <a href="./info" class="btn">Information</a>
+      <a href="./posters" class="btn">Posters</a>
+      <a href="./registration" class="btn">Registration</a>
+      <a href="./rules" class="btn">Rules</a>
+      <a href="./directions" class="btn">Directions</a>
+      <a href="./contact" class="btn">Contact</a>
     </header>
 
     <main id="content" class="main-content" role="main">
