--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
 
+      <a href="./" class="btn">Home</a>
       <a href="./info" class="btn">Information</a>
       <a href="./posters" class="btn">Posters</a>
       <a href="./registration" class="btn">Registration</a>
