--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,10 @@
       <a href="./" class="btn">Home</a>
       <a href="./info" class="btn">Information</a>
       <a href="./posters" class="btn">Posters</a>
+	  <a href="./rules" class="btn">Rules</a>
       <a href="./registration" class="btn">Registration</a>
       <a href="./directions" class="btn">Directions</a>
+	  <a href="./practiceProblem" class="btn">Practice</a>
       <a href="./contact" class="btn">Contact</a>
     </header>
 
